--- a/my-hr-genie/src/Components/HRMS_Dashboard/Dash_Layouts/Dash_Layouts.css
+++ b/my-hr-genie/src/Components/HRMS_Dashboard/Dash_Layouts/Dash_Layouts.css
@@ -7,6 +7,7 @@
 .hrms-layout-dashboard-main-content {
   flex-grow: 1;
   width: calc(100% - 300px);
+  height:100vh;
   transition: width 0.2s;
   display: flex;
   flex-direction: column;
