--- a/my-hr-genie/src/Components/HRMS_Dashboard/Dash_Pages/EmployeeRecordAdd/css.css
+++ b/my-hr-genie/src/Components/HRMS_Dashboard/Dash_Pages/EmployeeRecordAdd/css.css
@@ -72,3 +72,67 @@
       background:none ;
       color: #2A2A74;
   }
+
+
+
+
+
+
+
+
+
+
+
+
+  .hrms-dash-emp-record-card-header {
+    background-color: #F7F7F7;
+    padding: 15px 15px 15px 30px;
+  }
+  
+  .hrms-dash-emp-record-card-header h4 {
+    color: #2a2a74;
+    font-weight: 600;
+    font-size: 22px;
+    margin: 0;
+  }
+  
+  .hrms-dash-emp-record-card-body{
+    padding: 0px 20px;
+  }
+  
+  /* Fix selector grouping for input and select */
+  .input-group .form-control, 
+  .input-group .form-select {
+    height: 38px;
+    font-size: 16px;
+    border: 2px solid rgba(46, 55, 164, 0.1); /* Fix invalid 1A transparency */
+  }
+  
+  
+  /* Corrected focus styles */
+  .input-group .form-control:focus, 
+  .input-group .form-select:focus {
+    box-shadow: none;
+    outline: none;
+    background-color: transparent;
+  }
+  
+  .btn-save-record{
+    width: 150px;
+    height: 39px;
+    border-radius: 4px;
+    background: #2A2A74;
+    color: white;
+    font-weight: 600;
+    border:none ;
+  }
+  
+  .btn-save-record:hover{
+      margin-right: 5px;
+      border:1.5px solid #2A2A74;
+      background:none ;
+      color: #2A2A74;
+  }
+  
+  
+  
